fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,11 @@ body {
   table tr:hover {
     @apply bg-gray-100;
   }
+
+
+  table tr:hover .table-action >div {
+    @apply bg-gray-50;
+  }
   table tr {
     @apply relative border-b border-gray-300 border-solid hover:bg-gray-50;
   }
@@ -174,7 +179,7 @@ input[type="number"] {
 }
 
 .table-action > div {
-  @apply bg-gray-50 sm:bg-white gap-4 sm:gap-2
+  @apply bg-gray-50 sm:bg-white gap-4 sm:gap-2 sm:right-3
 }
 
 .navigation .nav-backdrop {
